--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -11,9 +11,10 @@
 
 
 <div th:each="res : ${resp}" align="center">
-<div th:text="${res.id}"></div><b>Equipment Number Successfully added</b>
+<div th:text="${res.id}"></div>
 
 </div>
+<div th:text="${msg}"></div>
 </div>
 </body>
 </html>
